# devcon

./: .editorconfig  .env.check-setup.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .tflint.hcl  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  copier.yml  docker-compose.yml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-persist.sh  initialize.sh  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  infra.instructions.md
.github/scripts/: check_iam_policies.py  check_oauth_scopes.py  dora_metrics.py  scorecard_metrics.py
.github/workflows/: cd-app-sandbox.yml  cd-app.yml  cd-infra-sandbox.yml  cd-infra.yml  cd-sandbox-cycle.yml  ci-sandbox.yml  ci.yml  devcontainer-build.yml  metrics-dora.yml  metrics-scorecard.yml  perf.yml  reusable-app-deploy.yml  reusable-backend.yml  reusable-changes.yml  reusable-frontend.yml  reusable-infra.yml  reusable-live-smoke.yml  reusable-scaffold.yml  reusable-scripts.yml  sandbox-guard.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: README.md  ai-instructions.md  app-development.md  aws-temporary-credentials.md  ci-cd-area-switches.md  development-environment.md  development-process.md  frontend-design.md  frontend-frameworks-demo.md  infrastructure.md  issues.md  org-rulesets.md  repository-variables.md  sandbox.md  scaffold-cli.md  sdd.md
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-spec-driven-development-with-cc-sdd.md  0003-keep-monorepo-through-domain-and-authn-expansion.md  0004-rename-services-by-role-and-nest-backend-by-language.md  0005-adopt-docker-in-docker-with-privileged-for-devcontainer.md  0006-dora-deployment-frequency-and-lead-time-definitions.md  0007-opentelemetry-adot-sidecar-for-distributed-tracing.md  0008-live-smoke-playwright-project-with-disposable-cognito-user.md  0009-iam-access-analyzer-static-policy-validation.md  0010-adopt-copier-for-scaffold-cli.md  0011-scaffold-template-in-place.md  0012-reusable-workflow-in-repo-tag-versioned.md  0013-decline-aidlc-workflows-adoption.md  0014-platform-maturity-scorecard-automation.md  0015-live-smoke-reusable-workflow.md  0016-terraform-bootstrap-module-distributed-in-repo.md  0017-policy-as-code-conftest.md  0018-devcontainer-image-ghcr-cachefrom.md  0019-policy-as-code-downstream-distribution.md  0020-vpc-endpoint-reachability-detection-deferred.md  0021-codespaces-user-secrets-for-check-setup-token.md  0022-widen-check-setup-token-scope-for-bootstrap-write.md  0023-cd-app-deploy-reusable-workflow-and-tfvars-materialize.md  0024-adopt-go-as-second-backend-language.md  0025-cd-sandbox-cycle-shared-state-guard.md  template.md
docs/design/: README.md
docs/metrics/: 2026-07.md  README.md  scorecard-criteria.md
docs/proposal/: copilot-rules-proposal.md  sdd-tooling-proposal.md  services-backend-frontend-rename-proposal.md  services-monorepo-boundary-check.md  web-frontend-modernization-proposal.md
docs/requirements/: README.md
infra/: .terraform.lock.hcl  CLAUDE.md  api.tf  auth.tf  backend.tf  db.tf  endpoints.tf  main.tf  network.tf  observability.tf  outputs.tf  shared.tf  variables.tf  versions.tf  web.tf
infra/bootstrap/: .terraform.lock.hcl  README.md  iam-agent-mcp.tf  iam-ci-deploy-auth.tf  iam-ci-deploy-compute.tf  iam-ci-deploy-data.tf  iam-ci-deploy-iam.tf  iam-ci-deploy-network.tf  iam-ci-deploy-observability.tf  iam-ci-deploy-storage-cdn.tf  iam-ci-roles.tf  locals.tf  main.tf  oidc.tf  outputs.tf  providers.tf  state.tf  variables.tf  versions.tf
infra/env/: dev.backend.hcl.example  dev.tfvars.example  prod.backend.hcl.example  prod.tfvars.example  (+2 more)
services/api/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_create_items.py
services/api/src/api/: __init__.py  config.py  main.py
services/api/src/api/db/: engine.py
services/api/src/api/db/models/: __init__.py
services/api/src/api/repositories/: items.py
services/api/src/api/routers/: items.py
services/api/src/api/schemas/: health.py  item.py
services/api/tests/: conftest.py  test_health.py  test_items.py  test_main.py
services/backend/python/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/backend/python/alembic/: script.py.mako
services/backend/python/alembic/versions/: 0001_create_items.py  dc70f2cc0640_add_items_input_length_constraints.py
services/backend/python/perf/: app.py
services/backend/python/src/api/: __init__.py  config.py  exception_handlers.py  logging_config.py  main.py  middleware.py  tracing.py
services/backend/python/src/api/auth/: __init__.py  dependencies.py  jwks.py  schemas.py
services/backend/python/src/api/db/: __init__.py  base.py  session.py
services/backend/python/src/api/db/models/: item.py
services/backend/python/src/api/repositories/: items.py
services/backend/python/src/api/routers/: greeting.py  health.py  items.py
services/backend/python/src/api/schemas/: greeting.py  health.py  item.py
services/backend/python/tests/: conftest.py  test_auth_dependencies.py  test_config.py  test_exception_handlers.py  test_greeting.py  test_health.py  test_items.py  test_items_auth.py  test_jwks.py  test_logging_config.py  test_middleware.py  test_tracing.py
(+110 files in other folders)
