[project]
name = "api"
version = "0.1.0"
description = "Backend REST API (FastAPI) for the web app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.11",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/api --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["src/api"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
