[project]
name = "api"
version = "0.1.0"
description = "Backend REST API (FastAPI) for the web app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "PyJWT[crypto]>=2.10.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.11",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# S101 (assert) is the normal way pytest tests express expectations.
"tests/*" = ["S101"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/api --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["src/api"]

[tool.mypy]
python_version = "3.14"
strict = true
# Keep in sync with CI's `mypy .` (ci.yml) — the CLI path argument there overrides this
# `files` list, so both must cover the same set or "green locally" can diverge from CI (#153,
# #269). alembic/ is included because it already passes strict mypy cleanly.
files = ["src", "tests", "perf", "alembic"]
